--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ target/
 .project
 .classpath
 
+.idea/compiler.xml
+.idea/libraries/Maven__ch_qos_logback_logback_classic_1_2_3.xml
+.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25.xml
+.idea/libraries/Maven__ch_qos_logback_logback_classic_1_2_3.xml
+.idea/libraries/Maven__com_wds_claimrecordation_claimrecordation_erv_external_model_1_0_0_SNAPSHOT.xml
