--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<version>1.18.0</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 </project>
