--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.11</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
