--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <commons-codec.version>1.15</commons-codec.version>
         <pdfbox.version>2.0.27</pdfbox.version>
         <commons-net.version>3.9.0</commons-net.version>
-        <lombok.version>1.18.28</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
         <openpdf.version>1.3.30</openpdf.version>
         <guava.version>32.0.0-jre</guava.version>
         <commons-math3.version>3.6.1</commons-math3.version>
@@ -25,6 +25,7 @@
         <logback.version>1.4.6</logback.version>
         <slf4j-api.version>2.0.5</slf4j-api.version>
         <junit-jupiter.version>5.9.2</junit-jupiter.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     </properties>
 
     <dependencies>
@@ -118,9 +119,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
