--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,22 @@
         <slf4j-api.version>2.0.5</slf4j-api.version>
         <junit-jupiter.version>5.9.2</junit-jupiter.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <graalvm.polyglot.version>23.1.1</graalvm.polyglot.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.graalvm.polyglot</groupId>
+            <artifactId>polyglot</artifactId>
+            <version>${graalvm.polyglot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.polyglot</groupId>
+            <!-- Select language: js, ruby, python, java, llvm, wasm, languages-->
+            <artifactId>python</artifactId>
+            <version>${graalvm.polyglot.version}</version>
+            <type>pom</type>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
